# poetry-plugin-appimage

./: .gitignore  pyproject.toml  readme.md
example_project/: main.py  pyproject.toml  readme.md
poetry_plugin_appimage/: plugin.py
poetry_plugin_appimage/templates/: CustomAppRun.sh.mako  application.desktop.mako  build_appimage.sh.mako  linuxdeploy-plugin-compile.sh  linuxdeploy-plugin-conda.sh  linuxdeploy-plugin-copyapp.sh  linuxdeploy-x86_64.AppImage
tests/: prep_for_e2e_test.sh  readme.md  test_e2e.py  test_mako_template.py
