[tool.poetry]
name = "poetry-plugin-appimage"
version = "0.0.2"
description = "Poetry plugin to build AppImage from a poetry project"
readme = "readme.md"
authors = ["Sai Sasidhar Maddali"]
license = "MIT"
repository = "https://github.com/nanotemper/poetry-plugin-appimage"
packages = [{include = "poetry_plugin_appimage"}]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.5.0"
poetry-plugin-export = "^1.4.0"
Mako = "^1.1.5"

[tool.poetry.dev-dependencies]
black = ">=20.0.0"
isort = ">=5.0.0"
pytest = "^6.2.5"
shellcheck-py = "^0.7.2.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
build-appimage = "poetry_plugin_appimage.plugin:PoetryAppimagePlugin"
